--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7c3d9371",
+   "id": "26713e36",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbc6086b",
+   "id": "0f60d4c5",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57270fbf",
+   "id": "3acbc830",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365f4ed1",
+   "id": "00a62779",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498cd120",
+   "id": "e90fad09",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecea8a30",
+   "id": "f1891227",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbf944f6",
+   "id": "f38edab6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:17.103437Z",
-     "iopub.status.busy": "2025-04-22T17:46:17.103267Z",
-     "iopub.status.idle": "2025-04-22T17:46:20.034568Z",
-     "shell.execute_reply": "2025-04-22T17:46:20.034038Z"
+     "iopub.execute_input": "2025-06-05T10:53:10.081907Z",
+     "iopub.status.busy": "2025-06-05T10:53:10.081490Z",
+     "iopub.status.idle": "2025-06-05T10:53:13.085940Z",
+     "shell.execute_reply": "2025-06-05T10:53:13.085419Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fbe3c8",
+   "id": "fd730a03",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1c6e66",
+   "id": "51fcef6f",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5f8f5c",
+   "id": "76aefc3f",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935bc14b",
+   "id": "84fdcf77",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6caea154",
+   "id": "cbe4434c",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "622ee993",
+   "id": "4d8a9bc4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4fd1ff",
+   "id": "3cefa7c1",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbace4ea",
+   "id": "e974d5cb",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b413916",
+   "id": "67aa97ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:20.036975Z",
-     "iopub.status.busy": "2025-04-22T17:46:20.036501Z",
-     "iopub.status.idle": "2025-04-22T17:46:21.990388Z",
-     "shell.execute_reply": "2025-04-22T17:46:21.989870Z"
+     "iopub.execute_input": "2025-06-05T10:53:13.088259Z",
+     "iopub.status.busy": "2025-06-05T10:53:13.087798Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.125980Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.125395Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24cd4f0b",
+   "id": "a760a2e2",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "880f5937",
+   "id": "b91aee3f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:21.992210Z",
-     "iopub.status.busy": "2025-04-22T17:46:21.992024Z",
-     "iopub.status.idle": "2025-04-22T17:46:21.995507Z",
-     "shell.execute_reply": "2025-04-22T17:46:21.994958Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.128133Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.127765Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.131547Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.130937Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b6f9616",
+   "id": "6794ec11",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf227ed",
+   "id": "ddab0842",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb360a01",
+   "id": "237ed281",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa785c1",
+   "id": "20eda43f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c8e4742b",
+   "id": "2c73cad4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:21.997407Z",
-     "iopub.status.busy": "2025-04-22T17:46:21.996975Z",
-     "iopub.status.idle": "2025-04-22T17:46:22.039866Z",
-     "shell.execute_reply": "2025-04-22T17:46:22.039343Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.133310Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.133129Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.177729Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.177196Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6a6313",
+   "id": "820e0265",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "96da22a7",
+   "id": "f986a651",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:22.041689Z",
-     "iopub.status.busy": "2025-04-22T17:46:22.041502Z",
-     "iopub.status.idle": "2025-04-22T17:46:22.107082Z",
-     "shell.execute_reply": "2025-04-22T17:46:22.106541Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.179769Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.179329Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.246284Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.245677Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb765840",
+   "id": "8c6a4722",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9474c39",
+   "id": "03d8d7a1",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f9d7748e",
+   "id": "5558036f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:22.109018Z",
-     "iopub.status.busy": "2025-04-22T17:46:22.108834Z",
-     "iopub.status.idle": "2025-04-22T17:46:22.135037Z",
-     "shell.execute_reply": "2025-04-22T17:46:22.134520Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.248322Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.247923Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.274198Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.273732Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab72daa8",
+   "id": "94ed77f9",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d604081a",
+   "id": "46c182db",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc5a3a5",
+   "id": "a27da10f",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ea8f7b",
+   "id": "4dc9406d",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bcef521",
+   "id": "d311d399",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e0bd2950",
+   "id": "0df7f2d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:22.137016Z",
-     "iopub.status.busy": "2025-04-22T17:46:22.136636Z",
-     "iopub.status.idle": "2025-04-22T17:46:22.141003Z",
-     "shell.execute_reply": "2025-04-22T17:46:22.140417Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.276182Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.275812Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.279909Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.279361Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfad246e",
+   "id": "77e7e016",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d52a2551",
+   "id": "831776bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:22.142550Z",
-     "iopub.status.busy": "2025-04-22T17:46:22.142387Z",
-     "iopub.status.idle": "2025-04-22T17:46:22.145530Z",
-     "shell.execute_reply": "2025-04-22T17:46:22.144861Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.281543Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.281366Z",
+     "iopub.status.idle": "2025-06-05T10:53:15.284347Z",
+     "shell.execute_reply": "2025-06-05T10:53:15.283873Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84bcceb",
+   "id": "27694420",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "87e5971f",
+   "id": "f2617b19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:22.147260Z",
-     "iopub.status.busy": "2025-04-22T17:46:22.146936Z",
-     "iopub.status.idle": "2025-04-22T17:46:24.685807Z",
-     "shell.execute_reply": "2025-04-22T17:46:24.685197Z"
+     "iopub.execute_input": "2025-06-05T10:53:15.285882Z",
+     "iopub.status.busy": "2025-06-05T10:53:15.285709Z",
+     "iopub.status.idle": "2025-06-05T10:53:17.870492Z",
+     "shell.execute_reply": "2025-06-05T10:53:17.869790Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00bc5e49",
+   "id": "c3b1bbb0",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a8bc68",
+   "id": "6584ef70",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e131885",
+   "id": "69114c3f",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cf01db0",
+   "id": "724cd1cc",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "215f8ab0",
+   "id": "7cfee539",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:24.688006Z",
-     "iopub.status.busy": "2025-04-22T17:46:24.687510Z",
-     "iopub.status.idle": "2025-04-22T17:46:24.691187Z",
-     "shell.execute_reply": "2025-04-22T17:46:24.690528Z"
+     "iopub.execute_input": "2025-06-05T10:53:17.872737Z",
+     "iopub.status.busy": "2025-06-05T10:53:17.872366Z",
+     "iopub.status.idle": "2025-06-05T10:53:17.876129Z",
+     "shell.execute_reply": "2025-06-05T10:53:17.875484Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6a7c7809a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4ac846bc40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74313bb1",
+   "id": "bf060d6f",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "168125ab",
+   "id": "6153bfa8",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e468a2",
+   "id": "9be76779",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955d01e2",
+   "id": "b34a5129",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "967e6f70",
+   "id": "27b14d75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:24.693097Z",
-     "iopub.status.busy": "2025-04-22T17:46:24.692750Z",
-     "iopub.status.idle": "2025-04-22T17:46:24.695840Z",
-     "shell.execute_reply": "2025-04-22T17:46:24.695191Z"
+     "iopub.execute_input": "2025-06-05T10:53:17.878220Z",
+     "iopub.status.busy": "2025-06-05T10:53:17.877860Z",
+     "iopub.status.idle": "2025-06-05T10:53:17.880872Z",
+     "shell.execute_reply": "2025-06-05T10:53:17.880299Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "452b6393",
+   "id": "450275d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-22T17:46:24.697568Z",
-     "iopub.status.busy": "2025-04-22T17:46:24.697239Z",
-     "iopub.status.idle": "2025-04-22T17:46:25.752261Z",
-     "shell.execute_reply": "2025-04-22T17:46:25.751725Z"
+     "iopub.execute_input": "2025-06-05T10:53:17.882730Z",
+     "iopub.status.busy": "2025-06-05T10:53:17.882325Z",
+     "iopub.status.idle": "2025-06-05T10:53:18.952523Z",
+     "shell.execute_reply": "2025-06-05T10:53:18.951910Z"
     }
    },
    "outputs": [
